<resources>
    <string name="app_name">Baby Listener</string>
    <string name="Register_New_Account">Register New Account</string>
    <string name="Create_New_Account">Create New Account</string>
    <string name="FullName">Full Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="Already_Registered">Already Registered? Log in here.</string>
    <string name="Phone">Phone</string>
    <string name="Authentication">Authentication</string>
    <string name="New_Here">New Here? Click Here.</string>
    <string name="Login">Login</string>
    <string name="Login_Page">Login Here!</string>
    <string name="Forgot_Password">Forgot the Password?</string>
    <string name="baby_sleeping">Your baby is sleeping, what a relief !</string>
    <string name="notification">Notification</string>
    <string name="baby_chilling">baby chilling</string>
    <string name="ok">OK !</string>
    <string name="WakeTime">Wake Times: </string>

</resources>
