<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create New Account"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="38dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="374dp"
        android:layout_height="64dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:text="@string/Register"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:layout_editor_absoluteX="18dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="374dp"
        android:layout_height="43dp"
        android:layout_marginTop="60dp"
        android:hint="@string/Email"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="21dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="374dp"
        android:layout_height="43dp"
        android:hint="@string/Password"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        tools:layout_editor_absoluteX="21dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="184dp"
        android:layout_height="168dp"
        android:layout_marginTop="52dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/login_pic"
        tools:layout_editor_absoluteX="113dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Already_Registered"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:layout_editor_absoluteX="104dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
